<resources>
    <string name="app_name">MessageZemoga</string>
    <string name="title_post">Post</string>
    <string name="title_favorites">Favorites</string>
    <string name="delete_post">Delete all Posts</string>
    <string name="tv_title_post">Title post</string>
    <string name="body_post">Body post</string>
    <string name="set_favorite_post">Set favorite post</string>
    <string name="post_unread">Post unread</string>
    <string name="size_comments">Comments (%s)</string>
    <string name="ask_delete_all_post">Are you sure to delete all posts?</string>
    <string name="title_delete_post">Delete posts</string>
    <string name="title_cancel_btn">Cancel</string>
    <string name="title_delete_btn">Delete</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="web">Web</string>
    <string name="make_favorite_post">Make favorite post</string>
    <string name="post_delete">The post was successfully deleted</string>
    <string name="comments">Comments</string>
    <string name="reload_post">Reload post</string>
    <string name="select_fav">You do not have favorite posts, select some</string>

    <string name="tile_explication_screen_1">Read new posts</string>
    <string name="decription_screen_1">Read multiple posts from various users, mark them as favorites</string>
    <string name="tile_explication_screen_2">Interact with users</string>
    <string name="decription_screen_2">You can read the comments of the users of any post which allows you greater interaction with them</string>
    <string name="tile_explication_screen_3">Delete post</string>
    <string name="decription_screen_3">If you do not like any publication you can delete it by moving the post to the right and left or all at the same time and reload new publications with a single click</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="empty_post">There are no new posts please reload to get new posts and continue enjoying</string>

    <string name="empty_list_post">No internet connection found please verify</string>


</resources>